--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Project Notes</title>
+        <link rel="stylesheet" href="css/style.css">
+        
+    </head>
+</html>
