--- a/index.html
+++ b/index.html
@@ -3,6 +3,54 @@
     <head>
         <title>Project Notes</title>
         <link rel="stylesheet" href="css/style.css">
-        
     </head>
+    <body>
+        <div class="index">
+            <div class="project">
+                <div class="project__title">
+                    <h1>0000-Project_EOT</h1>
+                </div>
+                <div class="project__breakdown">
+                    <h2>Breakdown</h2>
+                    <ul>
+                        <li>Background</li>
+                        <li>Research</li>
+                        <li>Design</li>
+                        <li>Development</li>
+                        <li>Testing</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project__title">
+                    <h1>0001-Project_Glen</h1>
+                </div>
+                <div class="project__breakdown">
+                    <h2>Breakdown</h2>
+                    <ul>
+                        <li>Background</li>
+                        <li>Research</li>
+                        <li>Design</li>
+                        <li>Development</li>
+                        <li>Testing</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project__title">
+                    <h1>0002-Project_KSU-AUV</h1>
+                </div>
+                <div class="project__breakdown">
+                    <h2>Breakdown</h2>
+                    <ul>
+                        <li>Background</li>
+                        <li>Research</li>
+                        <li>Design</li>
+                        <li>Development</li>
+                        <li>Testing</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
