--- a/index.html
+++ b/index.html
@@ -1,56 +1,79 @@
+<!-- The reason for no footer depicting this is a class project is that is being used for business purposes. -->
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Project Notes</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <div class="index">
-            <div class="project">
-                <div class="project__title">
-                    <h1>0000-Project_EOT</h1>
+
+<head>
+    <meta charset="”utf-8”" />
+    <meta name="”author”" content="”Michael" Lees” />
+    <meta name="”description”" content="”Michael" Lees Portfolio” />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+
+    <title>Michael Lees Portfolio</title>
+
+    <link rel="stylesheet" href="css/index.css" />
+</head>
+
+<body>
+    <div class="flex-nav-bar">
+        <div class="flex-nav-bar-item">
+            <a href="index.html">Home</a>
+        </div>
+        <div class="flex-nav-bar-item">
+            <a href="html/about.html">About</a>
+        </div>
+        <div class="flex-nav-bar-item">
+            <a href="html/contact.html">Contact</a>
+        </div>
+        <div class="flex-nav-bar-item">
+            <a href="html/business.html">Business</a>
+        </div>
+    </div>
+    <div class="flex-box">
+        <!-- I want to animate the image here to make it pop more -->
+        <div class="flex-box-item">
+            <!-- Want to add shadow around the black parts of the iamge but can't figure out SVG files -->
+            <img src="assets/images/logo.png" alt="Michael Lees Photography" />
+        </div>
+        <div class="flex-box-item-2">
+            <div class="card">
+                <h3 class="title">About</h3>
+                <div class="bar">
+                    <div class="emptybar"></div>
+                    <div class="filledbar"></div>
                 </div>
-                <div class="project__breakdown">
-                    <h2>Breakdown</h2>
-                    <ul>
-                        <li>Background</li>
-                        <li>Research</li>
-                        <li>Design</li>
-                        <li>Development</li>
-                        <li>Testing</li>
-                    </ul>
-                </div>
+                <p>
+                   I am a lover of drones and real estate photography.
+                   I decided to take my hobby to the next level and start a business.<br>
+                   With my drone, I can capture the beauty of the world from a new perspective.
+                </p>
+                <a href="html/about.html">Read More</a>
             </div>
-            <div class="project">
-                <div class="project__title">
-                    <h1>0001-Project_Glen</h1>
+            <div class="card">
+                <h3 class="title">Gallery</h3>
+                <div class="bar">
+                    <div class="emptybar"></div>
+                    <div class="filledbar"></div>
                 </div>
-                <div class="project__breakdown">
-                    <h2>Breakdown</h2>
-                    <ul>
-                        <li>Background</li>
-                        <li>Research</li>
-                        <li>Design</li>
-                        <li>Development</li>
-                        <li>Testing</li>
-                    </ul>
-                </div>
+                <p>
+                    View my past works here. If you see anything you like, you can 
+                    contact me through the contact page.
+                </p>
+                <a href="html/gallery.html">View Gallery</a>
             </div>
-            <div class="project">
-                <div class="project__title">
-                    <h1>0002-Project_KSU-AUV</h1>
+            <div class="card">
+                <h3 class="title">Business</h3>
+                <div class="bar">
+                    <div class="emptybar"></div>
+                    <div class="filledbar"></div>
                 </div>
-                <div class="project__breakdown">
-                    <h2>Breakdown</h2>
-                    <ul>
-                        <li>Background</li>
-                        <li>Research</li>
-                        <li>Design</li>
-                        <li>Development</li>
-                        <li>Testing</li>
-                    </ul>
-                </div>
+                <p>
+                    View the details about everything I offer including prices. 
+                    If you have any questions, you can contact me through the contact page.
+                </p>
+                <a href="html/business.html">View the Details</a>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
