added form to contact page

--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
         <div class="flex-nav-bar-item">
             <a href="html/contact.html">Contact</a>
         </div>
-        <div class="flex-nav-bar-item">
-            <a href="html/business.html">Business</a>
-        </div>
     </div>
     <div class="flex-box">
         <!-- I want to animate the image here to make it pop more -->
@@ -49,28 +46,15 @@
                 <a href="html/about.html">Read More</a>
             </div>
             <div class="card">
-                <h3 class="title">Gallery</h3>
+                <h3 class="title">Contact</h3>
                 <div class="bar">
                     <div class="emptybar"></div>
                     <div class="filledbar"></div>
                 </div>
                 <p>
-                    View my past works here. If you see anything you like, you can 
-                    contact me through the contact page.
+                    Get in touch with me to schedule a shoot or to ask any questions you may have.
                 </p>
-                <a href="html/gallery.html">View Gallery</a>
-            </div>
-            <div class="card">
-                <h3 class="title">Business</h3>
-                <div class="bar">
-                    <div class="emptybar"></div>
-                    <div class="filledbar"></div>
-                </div>
-                <p>
-                    View the details about everything I offer including prices. 
-                    If you have any questions, you can contact me through the contact page.
-                </p>
-                <a href="html/business.html">View the Details</a>
+                <a href="html/contact.html">Contact Me!</a>
             </div>
         </div>
     </div>
