added form to contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -73,7 +73,7 @@
         choices: choices.value,
         date_required_by: date_required_by.value
       };
-
+      postMessage(data);
       console.log(data);
     }
   </script>
